--- a/ch_descriptions_risk.tex
+++ b/ch_descriptions_risk.tex
@@ -21,28 +21,28 @@ The dataset does not include personal information from the users, such as name o
 
 Data was preprocessed excluding users whose monthly cellphone use either did not surpass a minimal number of calls $\mu$ or exceeded a maximal number $M$. This ensures we leave out outlying users such as call-centers or dead phones. In both datasets, we used $\mu = 5$ and $M = 400$.
 
-We then aggregate the call records for a five 
-month period into an edge list $(n_i, n_j, w_{i,j})$ where nodes $n_i$ and $n_j$ 
+We then aggregate the call records for a five
+month period into an edge list $(n_i, n_j, w_{i,j})$ where nodes $n_i$ and $n_j$
 represent users $i$ and $j$ respectively and $w_{i,j}$ is a boolean value
-indicating whether these two users have communicated at least once within the 
-five month period. This edge list will represent our mobile graph   
-$\calG = \left< \calN, \calE \right> $ where $\calN$ denotes the set of nodes (users) 
+indicating whether these two users have communicated at least once within the
+five month period. This edge list will represent our mobile graph
+$\calG = \left< \calN, \calE \right> $ where $\calN$ denotes the set of nodes (users)
 and $\calE$ the set of communication links. We note that only a subset $\calN_C$ nodes in $\calN$
 are clients of the mobile operator, the remaining nodes $\calN \setminus \calN_C$ are
 users that communicated with users in $ \calN_C $ but themselves are not clients of
-the mobile operator. 
+the mobile operator.
 
 Since geolocation information is available only for users in $\calN_C$, in the analysis we considered the graph $\calG_C = \left< \calN_C, \calE_C \right> $ of communications between clients of the operator.
 
-% \paragraph{Argentina.} 
+% \paragraph{Argentina.}
 \paragraph{Datasets Information.}
 
-The Argentinian dataset contains CDRs collected over a period of 5 months, from November 2011 to March 2012. The raw data logs contain, in average, more than 65 million calls per day. The minimum number of logs were registered on the 26th of January whilst the day with most calls was on the 7th of December.  The user base amounts to more than 21 million live lines of \textit{active} clients. The calls were placed through a network of 4477 geolocalized antennas. In total, data amounts to almost 10 billion calls. 
-% \paragraph{Mexico.} 
+The Argentinian dataset contains CDRs collected over a period of 5 months, from November 2011 to March 2012. The raw data logs contain, in average, more than 65 million calls per day. The minimum number of logs were registered on the 26th of January whilst the day with most calls was on the 7th of December.  The user base amounts to more than 21 million live lines of \textit{active} clients. The calls were placed through a network of 4477 geolocalized antennas. In total, data amounts to almost 10 billion calls.
+% \paragraph{Mexico.}
 
 The Mexican data source is an anonymized dataset from a national mobile phone operator. Data is available for every call made within a period of 24 months from January 2014 to December 2015. The raw logs contain at least 11 and at most 47 million daily calls. These were for the dates of   day for more than 8 million users that accessed the telecommunication company's (\textit{telco}) network to place the call. This means that users from other companies are logged, as long as one of the users registering the call is a client of the operator. In practice, we only considered CDRs between users in $\calN_C$ since geolocalization was only possible for this group.
 
-Information logged for each call included the duration and timestamp of the call, the users participating in the call and the antenna id that transmitted the call to the TelCo client. 
+Information logged for each call included the duration and timestamp of the call, the users participating in the call and the antenna id that transmitted the call to the TelCo client.
 
 
 % \subsection{Data Limitations}
@@ -61,7 +61,7 @@ Although a lot of information is available in the CDR datasets, there may be lim
 % Visualizar (agrego alfa, min_volume y zoom en regiones)
 
 
-\section{ Risk Maps} \label{methods}
+\section{ Risk Maps}\label{methods}
 
 In this section we describe how the Chagas disease risk maps were built for the in Argentina and in Mexico and we give an overview of their uses. As an overview, the risk maps hypothesize on the possibility of locating specific communities of higher disease prevalence outside of the endemic regions. They are based on the assumption that the stronger communication tie there is from the community to the endemic region, the higher the risk chances.
 
@@ -83,7 +83,7 @@ whereas in the case of Mexico, we used the region described in Section~ \cref{en
 
 \subsection{Detection of Vulnerable Users}
 
-Given the set of inhabitants of the risk area, we want to find those with a high communication pattern with residents of the endemic zone $E_Z$. To do this, we get the list of calls for each user and then determine the set of their neighbors in the social graph $\calG_C$. For each resident of the endemic zone, we tag all his graph neighbors as potentially vulnerable. We also tag the calls to (from) a certain antenna from (to) residents of the endemic area $E_Z$ as \textit{vulnerable calls}. With our definition, a user with at least one call from (to) the endemic area is enough to tag this user as vulnerable. 
+Given the set of inhabitants of the risk area, we want to find those with a high communication pattern with residents of the endemic zone $E_Z$. To do this, we get the list of calls for each user and then determine the set of their neighbors in the social graph $\calG_C$. For each resident of the endemic zone, we tag all his graph neighbors as potentially vulnerable. We also tag the calls to (from) a certain antenna from (to) residents of the endemic area $E_Z$ as \textit{vulnerable calls}. With our definition, a user with at least one call from (to) the endemic area is enough to tag this user as vulnerable.
 
 The next step is to aggregate this data for every antenna. Given an antenna $a$, we will have:
 \begin{itemize}
@@ -120,30 +120,30 @@ We used two filtering parameters to control which antennas are plotted.
 \end{itemize}
 
 When displaying the maps, these parameters were helpful to identify special small antennas which were covered under the circles of other antennas. Having more than four thousand antennas for each plot means that high volume antennas would graphically overlap those small neighboring ones. This \textit{noise} is unhelpful to the detection of smaller, more vulnerable, antennas.
- 
+
 We also have that parameters were tuned differently when zomming into different regions. For example: an antenna whose vulnerable percentage would be considered low at the national level can be locally high when zooming in at a more local level. These filtering parameters helped us explore these cases with more detail and provided great insight to the Mundo Sano Foundation.
 
 The following section presents these maps.
 
-\section{Riskmap Visualizations} \label{section:riskmaps}
+\section{Riskmap Visualizations}\label{section:riskmaps}
 
 \subsection{Risk Maps for Argentina}
 
 
 \begin{figure}[h!]
-	
+
 	\begin{minipage}{.495\linewidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
 		{figures/201112_hi_res_argentina_usuarios_proporcion_circulos_beta1/201112_hi_res_argentina_usuarios_proporcion_circulos_beta1}
-		
+
 		(a) $\beta = 0.01$
 	\end{minipage}
 	\begin{minipage}{.495\linewidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
 		{figures/201112_hi_res_argentina_usuarios_proporcion_circulos_beta15/201112_hi_res_argentina_usuarios_proporcion_circulos_beta15}
-		
+
 		(b) $\beta = 0.15$
 	\end{minipage}
 	\caption{Risk map for Argentina, filtered according to $\beta$.}
@@ -151,7 +151,7 @@ The following section presents these maps.
 \end{figure}
 
 As a first visualization, maps were drawn using a provincial or national scale.
-Advised by \textit{Mundo Sano} Foundation's experts, we then focused on areas of specific epidemic interest. 
+Advised by \textit{Mundo Sano} Foundation's experts, we then focused on areas of specific epidemic interest.
 
 Figure~ \cref{fig:mapa_argentina} shows the risk maps for Argentina, generated with
 two values for the $\beta$ filtering parameter, and fixing $m_v = 50$ inhabitants per antenna. After filtering with $\beta = 0.15$, we see that large portions of the country harbor potentially vulnerable individuals.
@@ -175,13 +175,13 @@ where we can see a gradient from the regions closer to the endemic zone $E_Z$ to
 % Histograma de porcentaje de vulnerabilidad por antena?
 % Cambios en los colores de los mapas (aclarar que el codigo de color cambia)
 
-As a result of inspecting the maps in Figure~ \cref{fig:mapa_argentina}, we decided to 
-focus visualizations in areas whose results were unexpected to the epidemiological experts. 
+As a result of inspecting the maps in Figure~ \cref{fig:mapa_argentina}, we decided to
+focus visualizations in areas whose results were unexpected to the epidemiological experts.
 These areas included the provinces of Tierra del Fuego, Chubut, Santa Cruz and Buenos Aires, with special focus on the metropolitan area of Greater Buenos Aires whose heatmap is shown in Figure~ \cref{fig:amba_map}.
 
 In some cases, antennas stood out for having a significantly higher link to the epidemic area than the adjacent ones. Our objective here was to enhance the visualization in areas outside of Gran Chaco looking for possible host communities of migrants from the ecoregion, infered by the social links given by the CDRs. Our assumptions were that if, in average, there was a high percentage of vulnerable users in that non-epidemic antenna, this would mean that there's a high possibility of having more infected users in that community.
 
-As a result of this visualization, high risk antennas were separately listed and manually located in political maps. This information was made available to the \textit{Mundo Sano} Foundation collaborators who used it as an aid for their campaign planning and as education for community health workers. 
+As a result of this visualization, high risk antennas were separately listed and manually located in political maps. This information was made available to the \textit{Mundo Sano} Foundation collaborators who used it as an aid for their campaign planning and as education for community health workers.
 
 \todo{preguntarle a Diego si hubo algun avance/resultado sobre esto.}
 
@@ -210,7 +210,7 @@ This data exploration allowed us to specifically detect outlying communities in 
 
 With the data provided by the CDRs and the endemic region defined in Section~ \cref{endemic_zone_mexico}, heatmaps were generated for Mexico using the methods described in Section~ \cref{methods}. The first generated visualizations are depicted in Figure~ \cref{fig:mapas_mexico},
 which includes a map of the country of Mexico, and a zoom-in on the South region of the country.
-We used $m_v = 80$ inhabitants per antenna, and a high filtering value $\beta = 0.50$, which 
+We used $m_v = 80$ inhabitants per antenna, and a high filtering value $\beta = 0.50$, which
 means that in all the antennas shown in Figure~ \cref{fig:mapas_mexico},
 more that 50\% of inhabitants have a social tie with the endemic region $E_Z$.
 For space reasons, we don't provide here more specific visualizations and analysis of the regions of Mexico.
@@ -220,22 +220,22 @@ For space reasons, we don't provide here more specific visualizations and analys
 		\centering
 		\includegraphics[width=0.95\columnwidth,height=3.2cm,keepaspectratio]
 		{figures/mexico_usuarios_volumen_circulos_allday_beta--50_min_volume--80_mexico_/mexico_usuarios_volumen_circulos_allday_beta--50_min_volume--80_mexico_}
-		
+
 		(a) National map, $\beta = 0.50$
 	\end{minipage}
 	\begin{minipage}{.520\linewidth}
 		\centering
 		\includegraphics[width=0.95\columnwidth,height=3.2cm,keepaspectratio]
 		{figures/sur_usuarios_volumen_circulos_allday_beta--50_min_volume--80_mexico_/sur_usuarios_volumen_circulos_allday_beta--50_min_volume--80_mexico_}
-		
+
 		(b) South region of Mexico, $\beta = 0.50$
 	\end{minipage}
-	
+
 	\begin{minipage}{.32\linewidth}
 		\centering
 		\includegraphics[width=0.90\columnwidth]
 		{figures/estado_mexico_usuarios_volumen_circulos_allday_beta--50_min_volume--80_mexico_/estado_mexico_usuarios_volumen_circulos_allday_beta--50_min_volume--80_mexico_}
-		
+
 		(c) State of Mexico, $\beta = 0.50$
 	\end{minipage}
 	\caption{Risk maps for Mexico}
@@ -247,27 +247,27 @@ For space reasons, we don't provide here more specific visualizations and analys
 
 \section{Features from the Data}
 
-The quality of any machine learning task on CDRs relies heavily on the ability to characterize the users and their communication patterns, in ways that are as differentiating as possible for the task at hand. 
+The quality of any machine learning task on CDRs relies heavily on the ability to characterize the users and their communication patterns, in ways that are as differentiating as possible for the task at hand.
 In general, the features constructed reflect calling and mobility patterns,
-segmented by different time periods during the week, and tagging whether the actions or subjects are `endemic'. 
+segmented by different time periods during the week, and tagging whether the actions or subjects are `endemic'.
 
 The goal of building a machine learning model is to evaluate which long-term migrations can be accurately predicted from the CDR data. Added to this, we would like to know what type information extracted from the data has most predictive power to our problem variable. This result would tell us what data feature is informative in detecting migrations, which in turn, would test the assumption on which we build the risk maps in \cref{section:riskmaps}.
 
-The CDR logs available for Argentina span a period of 5 months, 
+The CDR logs available for Argentina span a period of 5 months,
 whereas the Mexican dataset includes 24 months, from January 2014 to December 2015, making it more suitable for this study.
 
 To start, we divide the available data into two distinct periods:
 $T_0$, from January 2014 to July 2015, considered as the ``past" in our experiment;
 and $T_1$, from August 2015 to December 2015, considered as the ``present". Let $E_{Z1}$ be the users that live in the endemic region in period $T_0$
-and  $E_{Z0}$ bet he users that lived in the past (period $T_0$). Their set complements are defined as $\setcomp{ E_{Z1} }$ and $\setcomp{ E_{Z0} }$ respectively.
+and  $E_{Z0}$ bet he users that lived in the past (period $T_0$). Their set complements are defined as ${ E_{Z1} }^{\complement}$ and ${ E_{Z0} }^{\complement}$ respectively.
 
-Our dataset thus runs from August 2015 to December 2015 (period $T_1$) and all CDRs are processed to extract features by user and by link. This is because we can't introduce data from $T_0$ for a model trying to predict this same information. 
+Our dataset thus runs from August 2015 to December 2015 (period $T_1$) and all CDRs are processed to extract features by user and by link. This is because we can't introduce data from $T_0$ for a model trying to predict this same information.
 
-To start off building attributes from the data, each week is divided into time periods: 
-\begin{definition} \label{def:week-periods}
-	
+To start off building attributes from the data, each week is divided into time periods:
+\begin{definition}\label{def:week-periods}
+
 	(i) the period \textit{weekday} is from Monday to Friday, on working hours (from 8hs to 20hs); (ii) \textit{weeknight} is from Monday to Friday, between 20hs and 8hs of the following day;
-	and (iii) \textit{weekend} is Saturday and Sunday.	
+	and (iii) \textit{weekend} is Saturday and Sunday.
 \end{definition}
 
 
@@ -278,18 +278,18 @@ The model consists of the following features, which can be classified in 4 categ
 \subsection{Used and home antennas.}\label{homeantenna}
 
 For each user $u \in \calN_C$, we register the top ten most used antennas, during each month of the training period,
-together with the number of calls made through each antenna. We tag all users having their home antenna in the epidemic region as \textit{EPIDEMIC}. 
+together with the number of calls made through each antenna. We tag all users having their home antenna in the epidemic region as \textit{EPIDEMIC}.
 
 In our dataset user antennas are order with $0$ being the most used antenna and $9$ the least. We fill with null values for those users for which we don't have ten used antennas and discard users that have no calls on weeknights\footnote{This is because we wouldn't be able to detect $H_u$.}.
-%Which 10 antennas does a user use most during each month of the training month interval? 
+%Which 10 antennas does a user use most during each month of the training month interval?
 %
-%How many calls have been made through each antenna? 
+%How many calls have been made through each antenna?
 %
 %Sort antennas with 0 being the most used and 10 the least used. Fill with nulls when less than 10 antennas were used.
 We also register the most used antennas considering only calls made during the \textit{weeknight} period, as defined in \cref{def:week-periods}. % that is from Monday to Friday excluding the working hours (from 8hs to 20hs)\label{WEEKNIGHT}.
 % Log counts as well.
 
-A user's home antenna is defined by the most used antenna. For our algorithms we considered two versions, the most used antenna in all of $T_0$., and the most used antenna during the \textit{week night} for 5 months. 
+A user's home antenna is defined by the most used antenna. For our algorithms we considered two versions, the most used antenna in all of $T_0$., and the most used antenna during the \textit{week night} for 5 months.
 With this, users were tagged as `endemic' if their home antenna is in the endemic zone $E_Z$ and `exposed' if any of the ten antennas logged is in the risk area.
 
 
@@ -305,14 +305,14 @@ We register the mobility diameter of each user, as the diameter of the convex hu
 
 We look at the social graph $\calG_C$ built from the CDRs, and the communications between nodes in $\calN_C$.
 
-For each edge $\left< n_i, n_j \right> \in \calE_C$, we dive into each of their interactions, segmenting call data with different criteria. For %\textbf{each} 
+For each edge $\left< n_i, n_j \right> \in \calE_C$, we dive into each of their interactions, segmenting call data with different criteria. For %\textbf{each}
 each month and each pair of users $\left< i,j \right>$, we gather the tuple $\left< time_{ij}, calls_{ij}, dir, period \right>$ where $time$ is the sum of all calls (in seconds), $calls$ is the number of calls exchanged, $dir$ is a boolean variable indicating whether the calls were incoming or outgoing (from user $i$'s point of view) and $period$ corresponds to a segmentation of the week into the periods \textit{weekday}, \textit{weeknight}, and \textit{weekend}.
 
 
 In this sense, two users $u_i, u_j \in \calN_C, u_i \neq uj$ are \textbf{neighbors} in the social graph if $time_{ij} > 0$.
 
 %\begin{description}
-%     \item [Neighbors.] From the social graph built from the CDRs we extracted the total count of neighbors in the communication graph and the total count of epidemic neighbors. 
+%     \item [Neighbors.] From the social graph built from the CDRs we extracted the total count of neighbors in the communication graph and the total count of epidemic neighbors.
 %      \item [Calls.] For each month, the total time and count of monthly calls made during is aggregated per user. This information is also segmented according to the hour of the day that the calls were made and whether they were made during the weekends. Special care was taken with calls placed to and from vulnerable users and aggregated accordingly.
 %\end{description}
 
@@ -334,7 +334,7 @@ To illustrate the point, we show a small example of how two calling features cou
 		Calls WeekEnd InVul08       & Count of calls & Placed on WeekEnds & Incoming calls & Edges with endemic neighbours only & August\\
 		\midrule
 		Time WeekNight Out12 & Sum of duration in seconds & During weekdays and on out-of-office hours & Outgoing   & No endemic filtering   & December \\
-		
+
 		\bottomrule
 	\end{tabular}
 \end{table}
@@ -343,25 +343,25 @@ To illustrate the point, we show a small example of how two calling features cou
 %TimeWeekNight_OUT_12
 %CallsWeekEnd_IN_12
 
-Finally we aggregate all these variables at the user level, summing over all columns and grouping by user. 
+Finally we aggregate all these variables at the user level, summing over all columns and grouping by user.
 In practice, this means grouping either by $j$ or $i$, and summing across all of the different components shown above.
 
 We also label each edge $\left< n_i, n_j \right> \in \calE_C$ if one or both users is endemic and
-ands count each user's amount of neighbors in the communication graph, as well as the endemic neighbors. This labeling defines user $i$ as \textit{vulnerable} whenever he has any edge with another user $j$ who lives in the endemic region $E_Z$. 
+ands count each user's amount of neighbors in the communication graph, as well as the endemic neighbors. This labeling defines user $i$ as \textit{vulnerable} whenever he has any edge with another user $j$ who lives in the endemic region $E_Z$.
 
-%% el vulnerable NO es el edge, sino que es el usuario . 
+%% el vulnerable NO es el edge, sino que es el usuario .
 %La idea es, parate en el nodo i, hace algun filtro - o ninguno - de weeknight, in/out, weekend, mes, etc. y ahora decime
 %% if $\exists j$ such that edge $ij$ existe en el grafo de llamados (con el filtro que hayamos usado en ese momento puesto).
 %%
 
-%Additionally, for each user, we extract the total 
+%Additionally, for each user, we extract the total
 
 \subsection{Antenna Distribution}
 
 As explained, the training data belongs to period $T_1$, from August 2015 to December 2015;
 whereas the ground truth that we use to validate the predictions belongs to $T_0$, from January 2014 to August 2015. Raw data logs contain between 11 million and 30 million calls per day and the volume of calls increases over the months, where most recent months have higher rates.
 
-After preprocessing and cleaning the dataset, we obtained 
+After preprocessing and cleaning the dataset, we obtained
 a training set with 1.6 million users.
 
 To compare how this sampled population compares to country-wide distribution estimates,
@@ -396,20 +396,20 @@ The table above describes the similarity between the population distribution of 
 
 Note that during this work we considered only postpaid users, i.e., users which have a monthly plan rate. This filtering was done because prepaid users have a higher churn rate, thus meaning that phone lines are not necessarily associated with one single person during the two years of analysis, making them less suitable for the purpose of this study.
 
-% (i.e. cellphone lines might ``jump" suddenly from one region to another).
+% (i.e.\ cellphone lines might ``jump" suddenly from one region to another).
 
 % Data was manipulated to build a ??
 
 
 \subsubsection{ User Migrations} % {Ground Truth.}
 
-We performed an analysis similar to the home antenna detection previously described in \cref{endemic_zone_mexico}, 
+We performed an analysis similar to the home antenna detection previously described in \cref{endemic_zone_mexico},
 but considering the time period $T_0$ (from January 2014 to July 2015),
 in order to determine the home antenna of users during $T_0$.
 
 The number of people which maintain their home antenna between $T_0$ and $T_1$ is 1,012,416;
 whereas 580,425 users had a change in their home antenna.
-In terms of endemic condition, we observed that 1,551,560 users maintained their endemic condition, whether it be positive or negative, 
+In terms of endemic condition, we observed that 1,551,560 users maintained their endemic condition, whether it be positive or negative,
 between $T_0$ and $T_1$, whereas 41,281 had a change.
 
 
@@ -423,8 +423,8 @@ between $T_0$ and $T_1$, whereas 41,281 had a change.
 %Refinando la epidemicidad:
 
 % Confusion matrix
-Table~\cref{tab:changes} 
-shows the matrix of changes $C$, such that $C_{i, j}$ is the number of users that were in group $i$ during period $T_0$ (the past) and moved to group $j$ during the training period $T_1$. As an example, lower left means was endemic, is now not endemic. 
+Table~\cref{tab:changes}
+shows the matrix of changes $C$, such that $C_{i, j}$ is the number of users that were in group $i$ during period $T_0$ (the past) and moved to group $j$ during the training period $T_1$. As an example, lower left means was endemic, is now not endemic.
 
 \begin{table}[ht]
 	\caption{Matrix of endemicity change}
